# otus_cpp2_passing2

./: CMakeLists.txt  Gtest_version.cpp  README.md  ip_filtr.cpp  ip_filtr.h  main.cpp  test_version.cpp  tuplesIP.cpp  tuplesIP.h
.github/workflows/: release.yml
